--- a/project/templates/flatpages/default.html
+++ b/project/templates/flatpages/default.html
@@ -6,37 +6,41 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>{% block title %}{{flatpage.title}}{%endblock title%}</title>
-
+        {% load cache %}
         {% load static %}
         <!-- Core theme CSS (includes Bootstrap)-->
         <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %} /" type="text/css"> -->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
+    {% cache 300 sidebar %}
+    {% block sidebar %}
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-   <div class="container">
-       <a class="navbar-brand" href="/">News Portal</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse"
-               data-target="#navbarResponsive"
-               aria-controls="navbarResponsive" aria-expanded="false"
-               aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarResponsive">
-           <ul class="navbar-nav ml-auto">
-               <li class="nav-item">
-                   <a class="nav-link" href="/news/search/">Search</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="/news/">Posts</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="/admin/">Admin Page</a>
-               </li>
-           </ul>
-       </div>
-   </div>
-</nav>
+           <div class="container">
+               <a class="navbar-brand" href="/">News Portal</a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse"
+                       data-target="#navbarResponsive"
+                       aria-controls="navbarResponsive" aria-expanded="false"
+                       aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarResponsive">
+                   <ul class="navbar-nav ml-auto">
+                       <li class="nav-item">
+                           <a class="nav-link" href="/news/search/">Search</a>
+                       </li>
+                       <li class="nav-item">
+                           <a class="nav-link" href="/news/">Posts</a>
+                       </li>
+                       <li class="nav-item">
+                           <a class="nav-link" href="/admin/">Admin Page</a>
+                       </li>
+                   </ul>
+               </div>
+           </div>
+            {% endblock sidebar %}
+            {% endcache %}
+        </nav>
         <!-- Page content-->
         <div class="container">
             <div class="row">
