--- a/project/templates/flatpages/default.html
+++ b/project/templates/flatpages/default.html
@@ -8,6 +8,7 @@
         <title>{% block title %}{{flatpage.title}}{%endblock title%}</title>
         {% load cache %}
         {% load static %}
+        {% load i18n %}
         <!-- Core theme CSS (includes Bootstrap)-->
         <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %} /" type="text/css"> -->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
@@ -16,6 +17,22 @@
     {% block sidebar %}
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+
+            <form action="{% url 'set_language' %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ redirect_to }}">
+                <select name="language" id="">
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    {% for language in languages %}
+                    <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                        {{ language.name_local }} - {{ language.code }}
+                    </option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="set">
+            </form>
+
            <div class="container">
                <a class="navbar-brand" href="/">News Portal</a>
                <button class="navbar-toggler" type="button" data-toggle="collapse"
